# ChromeEmbyQueryPlugin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  background.js  build.py  build_extension.ps1  config.py  content.js  how2run.txt  manifest.json  options.html  options.js  pyproject.toml  requirements.txt  run.bat  run.sh  run_server.py  server.bat  server.py  server.sh
images/: icon.js
tests/: test_server.py
