[project]
name = "emby-query-server"
version = "1.0.0"
description = "Emby Query Chrome Extension Backend Server"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
    "requests>=2.31.0",
]

[project.scripts]
emby-query = "server:main"

[tool.uv]
python-downloads = "automatic"
